# begin /* Add examples' subdirectories */
add_subdirectory(sssp)
add_subdirectory(bfs)
add_subdirectory(color)
add_subdirectory(geo)
add_subdirectory(pr)
add_subdirectory(ppr)
add_subdirectory(bc)
add_subdirectory(hits)
add_subdirectory(kcore)
add_subdirectory(spmv)
# end /* Add examples' subdirectories */

# begin /* Add experimental examples' subdirectories */
add_subdirectory(experimental/async)
